--- a/LayoutDemo/MainWindow.axaml
+++ b/LayoutDemo/MainWindow.axaml
@@ -10,13 +10,19 @@
         Width="700" Height="500"
         Title="{Binding $self.Bounds, StringFormat={}LayoutDemo {0}}">
  
-    <local:AdaptivePanel UseLayoutRounding="False">
-        <Panel Background="Red"/>
-        <Panel Background="Green"/>
-        <Panel Background="Blue"/>
-        <Panel Background="Yellow"/>
-        <Panel Background="Black"/>
-    </local:AdaptivePanel>
+    <Grid RowDefinitions="400,*">
+        <local:AdaptivePanel Columns="1, 2, 3"
+                             Triggers="250, 500, 800"
+                             UseLayoutRounding="False" 
+                             Background="LightGray">
+            <Border CornerRadius="4" Margin="4" Background="Red" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 1" />
+            <Border CornerRadius="4" Margin="4" Background="Green" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 1" />
+            <Border CornerRadius="4" Margin="4" Background="Blue" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 1" />
+            <Border CornerRadius="4" Margin="4" Background="Yellow" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 2" />
+            <Border CornerRadius="4" Margin="4" Background="Black" local:AdaptivePanel.ColumnSpan="1, 2, 2" local:AdaptivePanel.RowSpan="1, 2, 2"/>
+        </local:AdaptivePanel>
+    </Grid>
+
 
     <!--
     <local:AdaptiveGrid UseLayoutRounding="False" ShowGridLines="True">
