--- a/LayoutDemo/App.axaml
+++ b/LayoutDemo/App.axaml
@@ -3,5 +3,6 @@
              x:Class="LayoutDemo.App">
     <Application.Styles>
         <FluentTheme Mode="Light"/>
+        <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml" />
     </Application.Styles>
 </Application>
