--- a/LayoutDemo/MainWindow.axaml
+++ b/LayoutDemo/MainWindow.axaml
@@ -2,70 +2,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:LayoutDemo"
+        xmlns:views="clr-namespace:LayoutDemo.Views"
         mc:Ignorable="d" d:DesignWidth="550" d:DesignHeight="500"
         x:Class="LayoutDemo.MainWindow"
         WindowStartupLocation="CenterScreen"
         UseLayoutRounding="True"
         Width="700" Height="500"
         Title="{Binding $self.Bounds, StringFormat={}LayoutDemo {0}}">
-
-    <DockPanel>
-       
-        <Label Content="Test Wallet" Margin="12" DockPanel.Dock="Top"/>
-
-        <Grid RowDefinitions="Auto,*">
-
-            <local:AdaptivePanel Grid.Row="0" 
-                                 Margin="12,0,12,0"
-                                 AspectRatio="0.5"
-                                 Columns="1, 2, 3"
-                                 Triggers="150, 300, 500"
-                                 UseLayoutRounding="False" 
-                                 Background="LightGray">
-                <Border CornerRadius="4" Margin="4" Background="Red" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 1" />
-                <Border CornerRadius="4" Margin="4" Background="Green" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 1" />
-                <Border CornerRadius="4" Margin="4" Background="Blue" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 1" />
-                <Border CornerRadius="4" Margin="4" Background="Yellow" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 2" />
-                <Border CornerRadius="4" Margin="4" Background="Black" local:AdaptivePanel.ColumnSpan="1, 2, 2" local:AdaptivePanel.RowSpan="1, 2, 2"/>
-            </local:AdaptivePanel>
-
-            <DockPanel Grid.Row="1">
-                <Label Content="Transaction History" Margin="12" DockPanel.Dock="Top"/>
-                <DataGrid  AutoGenerateColumns="False" Margin="12,0,12,12">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn CanUserSort="False" Header="Date"/>
-                        <DataGridTextColumn CanUserSort="False" Header="Description"/>
-                        <DataGridTextColumn CanUserSort="False" Header="Outgoing"/>
-                        <DataGridTextColumn CanUserSort="False" Header="Incoming"/>
-                        <DataGridTextColumn CanUserSort="False" Header="Status"/>
-                    </DataGrid.Columns>
-                </DataGrid>
-            </DockPanel>
-                
-        </Grid>
- 
-    </DockPanel>
-    
-    <!--
-    <local:AdaptiveGrid UseLayoutRounding="False" ShowGridLines="True">
-        <Panel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="1" Grid.RowSpan="1" Background="Red"/>
-        <Panel Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="1" Grid.RowSpan="1" Background="Green"/>
-        <Panel Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="1" Grid.RowSpan="1" Background="Blue"/>
-        <Panel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="1" Grid.RowSpan="1" Background="Yellow"/>
-        <Panel Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Grid.RowSpan="1" Background="Black"/>
-    </local:AdaptiveGrid> 
-    -->
-
-    <!--
-    <TabControl>
-        <TabItem Header="WeightedPanel">
-            <local:WeightedPanelView/>
-        </TabItem>
-        <TabItem Header="VanishingPointPanel">
-            <local:VanishingPointPanelView/>
-        </TabItem>
-    </TabControl>
-    -->
-
+    <!-- <views:AdaptiveGridView/> -->
+    <views:AdaptivePanelView/>
+    <!-- <views:VanishingPointPanelView/> -->
+    <!-- <views:WeightedPanelView/> -->
 </Window>
