--- a/LayoutDemo/Views/VanishingPointPanelView.axaml
+++ b/LayoutDemo/Views/VanishingPointPanelView.axaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:local="clr-namespace:LayoutDemo"
              mc:Ignorable="d" d:DesignWidth="600" d:DesignHeight="400"
-             x:Class="LayoutDemo.VanishingPointPanelView">
+             x:Class="LayoutDemo.Views.VanishingPointPanelView">
     <DockPanel>
         <StackPanel DockPanel.Dock="Left" Width="180" Margin="8">
             <StackPanel>
