--- a/LayoutDemo/Views/WeightedPanelView.axaml
+++ b/LayoutDemo/Views/WeightedPanelView.axaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:local="clr-namespace:LayoutDemo"
              mc:Ignorable="d" d:DesignWidth="600" d:DesignHeight="400"
-             x:Class="LayoutDemo.WeightedPanelView">
+             x:Class="LayoutDemo.Views.WeightedPanelView">
     <Grid ColumnDefinitions="*,*">
         <local:WeightedPanel Grid.Column="1" Orientation="Vertical" Margin="8">
             <Panel Background="Red" local:WeightedPanel.Weight="6"/>
