--- a/LayoutDemo/Views/AdaptivePanelView.axaml
+++ b/LayoutDemo/Views/AdaptivePanelView.axaml
@@ -3,17 +3,17 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:local="clr-namespace:LayoutDemo"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             mc:Ignorable="d" d:DesignWidth="732" d:DesignHeight="650"
              x:Class="LayoutDemo.Views.AdaptivePanelView">
 
     <DockPanel>
        
-        <Label Content="Test Wallet" Margin="12" DockPanel.Dock="Top"/>
+        <Label Content="Test Wallet" Margin="24" DockPanel.Dock="Top"/>
 
         <!-- For adaptive height set RowDefinitions="Auto,*" and AspectRatio="0.5" -->
-        <!-- For fixed height set RowDefinitions="400,*" and AspectRatio="NaN" -->
+        <!-- For fixed height set RowDefinitions="350,*" and AspectRatio="NaN" -->
 
-        <Grid RowDefinitions="400,*">
+        <Grid RowDefinitions="402,*">
 
             <local:AdaptivePanel Grid.Row="0" 
                                  Margin="12,0,12,0"
@@ -22,15 +22,15 @@
                                  Triggers="150, 300, 500"
                                  UseLayoutRounding="False" 
                                  Background="LightGray">
-                <Border CornerRadius="4" Margin="4" Background="Red" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 1" />
-                <Border CornerRadius="4" Margin="4" Background="Green" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 1" />
-                <Border CornerRadius="4" Margin="4" Background="Blue" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 1" />
-                <Border CornerRadius="4" Margin="4" Background="Yellow" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 2" />
-                <Border CornerRadius="4" Margin="4" Background="Black" local:AdaptivePanel.ColumnSpan="1, 2, 2" local:AdaptivePanel.RowSpan="1, 2, 2"/>
+                <Border CornerRadius="4" Margin="4" Background="Red" ToolTip.Tip="{Binding $self.Bounds.Size}" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 1" />
+                <Border CornerRadius="4" Margin="4" Background="Green" ToolTip.Tip="{Binding $self.Bounds.Size}" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 1" />
+                <Border CornerRadius="4" Margin="4" Background="Blue" ToolTip.Tip="{Binding $self.Bounds.Size}" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 1" />
+                <Border CornerRadius="4" Margin="4" Background="Yellow" ToolTip.Tip="{Binding $self.Bounds.Size}" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 2" />
+                <Border CornerRadius="4" Margin="4" Background="Black" ToolTip.Tip="{Binding $self.Bounds.Size}" local:AdaptivePanel.ColumnSpan="1, 2, 2" local:AdaptivePanel.RowSpan="1, 2, 2"/>
             </local:AdaptivePanel>
 
             <DockPanel Grid.Row="1">
-                <Label Content="Transaction History" Margin="12" DockPanel.Dock="Top"/>
+                <Label Content="Transaction History" Margin="16" DockPanel.Dock="Top"/>
                 <DataGrid  AutoGenerateColumns="False" Margin="12,0,12,12">
                     <DataGrid.Columns>
                         <DataGridTextColumn CanUserSort="False" Header="Date"/>
