--- a/LayoutDemo/Views/AdaptivePanelView.axaml
+++ b/LayoutDemo/Views/AdaptivePanelView.axaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:local="clr-namespace:LayoutDemo"
+             xmlns:c="clr-namespace:LayoutDemo.Controls"
              mc:Ignorable="d" d:DesignWidth="732" d:DesignHeight="650"
              x:Class="LayoutDemo.Views.AdaptivePanelView">
 
@@ -15,19 +15,19 @@
 
         <Grid RowDefinitions="402,*">
 
-            <local:AdaptivePanel Grid.Row="0" 
-                                 Margin="12,0,12,0"
-                                 AspectRatio="NaN"
-                                 ColumnHints="1, 2, 3"
-                                 WidthTriggers="150, 300, 500"
-                                 UseLayoutRounding="False" 
-                                 Background="LightGray">
-                <Border CornerRadius="4" Margin="4" Background="Red" ToolTip.Tip="{Binding $self.Bounds.Size}" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 1" />
-                <Border CornerRadius="4" Margin="4" Background="Green" ToolTip.Tip="{Binding $self.Bounds.Size}" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 1" />
-                <Border CornerRadius="4" Margin="4" Background="Blue" ToolTip.Tip="{Binding $self.Bounds.Size}" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 1" />
-                <Border CornerRadius="4" Margin="4" Background="Yellow" ToolTip.Tip="{Binding $self.Bounds.Size}" local:AdaptivePanel.ColumnSpan="1, 1, 1" local:AdaptivePanel.RowSpan="1, 1, 2" />
-                <Border CornerRadius="4" Margin="4" Background="Black" ToolTip.Tip="{Binding $self.Bounds.Size}" local:AdaptivePanel.ColumnSpan="1, 2, 2" local:AdaptivePanel.RowSpan="1, 2, 2"/>
-            </local:AdaptivePanel>
+            <c:AdaptivePanel Grid.Row="0" 
+                             Margin="12,0,12,0"
+                             AspectRatio="NaN"
+                             ColumnHints="1, 2, 3"
+                             WidthTriggers="150, 300, 500"
+                             UseLayoutRounding="False" 
+                             Background="LightGray">
+                <Border CornerRadius="4" Margin="4" Background="Red" ToolTip.Tip="{Binding $self.Bounds.Size}" c:AdaptivePanel.ColumnSpan="1, 1, 1" c:AdaptivePanel.RowSpan="1, 1, 1" />
+                <Border CornerRadius="4" Margin="4" Background="Green" ToolTip.Tip="{Binding $self.Bounds.Size}" c:AdaptivePanel.ColumnSpan="1, 1, 1" c:AdaptivePanel.RowSpan="1, 1, 1" />
+                <Border CornerRadius="4" Margin="4" Background="Blue" ToolTip.Tip="{Binding $self.Bounds.Size}" c:AdaptivePanel.ColumnSpan="1, 1, 1" c:AdaptivePanel.RowSpan="1, 1, 1" />
+                <Border CornerRadius="4" Margin="4" Background="Yellow" ToolTip.Tip="{Binding $self.Bounds.Size}" c:AdaptivePanel.ColumnSpan="1, 1, 1" c:AdaptivePanel.RowSpan="1, 1, 2" />
+                <Border CornerRadius="4" Margin="4" Background="Black" ToolTip.Tip="{Binding $self.Bounds.Size}" c:AdaptivePanel.ColumnSpan="1, 2, 2" c:AdaptivePanel.RowSpan="1, 2, 2"/>
+            </c:AdaptivePanel>
 
             <DockPanel Grid.Row="1">
                 <Label Content="Transaction History" Margin="16" DockPanel.Dock="Top"/>
