--- a/LayoutDemo/Views/VanishingPointPanelView.axaml
+++ b/LayoutDemo/Views/VanishingPointPanelView.axaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:local="clr-namespace:LayoutDemo"
+             xmlns:c="clr-namespace:LayoutDemo.Controls"
              mc:Ignorable="d" d:DesignWidth="600" d:DesignHeight="400"
              x:Class="LayoutDemo.Views.VanishingPointPanelView">
     <DockPanel>
@@ -20,17 +20,17 @@
                                Margin="8"/>
             </StackPanel>
         </StackPanel>
-        <local:VanishingPointPanel Name="VPanel"
-                                   ZFactor="0.7" 
-                                   ItemHeight="100"
-                                   Background="LightGray"
-                                   Width="300" Height="300"
-                                   VerticalAlignment="Center" HorizontalAlignment="Center">
+        <c:VanishingPointPanel Name="VPanel"
+                               ZFactor="0.7" 
+                               ItemHeight="100"
+                               Background="LightGray"
+                               Width="300" Height="300"
+                               VerticalAlignment="Center" HorizontalAlignment="Center">
             <Panel Background="Red"/>
             <Panel Background="Green"/>
             <Panel Background="Blue"/>
             <Panel Background="Yellow"/>
             <Panel Background="Cyan"/>
-        </local:VanishingPointPanel>
+        </c:VanishingPointPanel>
     </DockPanel>
 </UserControl>
