--- a/LayoutDemo/MainWindow.axaml
+++ b/LayoutDemo/MainWindow.axaml
@@ -12,5 +12,6 @@
     <!-- <views:AdaptiveGridView/> -->
     <views:ResponsivePanelView/>
     <!-- <views:VanishingPointPanelView/> -->
+    <!-- <views:VariableSizedGridPanelView/> -->
     <!-- <views:WeightedPanelView/> -->
 </Window>
